welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Int
		for(i <- 0 to nbPas) 
                      ^Program:11: error: type mismatch;
 found   : Unit
 required: Int
		for(i <- 0 to nbPas) 
                      ^