welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant : Boolean) : Int =
{
	if (versLAvant) 
	{
		for(i <- 0 to nbPas) 
			avance();
	} 
	else 
	{
		for(i <- 0 to nbPas) 
			recule();
	}
}